Release 1.3.5

Issue #12215 - Sampling strategy returns data outside query bounds

Release 1.3.4

Update preload database to 1.0.12
Update xarray from 0.8.2 to 0.9.2
Handle unsigned int8 values in netcdf4 classic
Encode asset management last modified timestamp as string

Release 1.3.3

Update preload database to 1.0.11
Update ion-functions to 2.3.1

Release 1.3.2

Update preload database to 1.0.10

Release 1.3.1

Fix issue with QC results and update numpy
Update preload database to 1.0.9

Release 1.3.0

Updated required packages
- numpy
- numexpr
- scipy
- ooi-data
- flask
- gunicorn
- xarray
- pandas

Release 1.2.10

Fix bugs preventing virtual stream computation
OOI Data version 0.0.5
Preload database version 1.0.8

Release 1.2.9

Issue #12040 - parameter resolution error
Issue #10396 - parameter resolution error
Issue #4107 - dissolved oxygen computation fixes
Issue #9011 - dissolved oxygen computation fixes

Release 1.2.8

Issue #12035
- Update resolution of L2 parameters that depend on other L2

Release 1.2.7

Migrate preload data model to ooi_data

Release 1.2.6

Issue #10777
- Don't report all data masked when querying virtual streams

Release 1.2.5

Issue #11871
- Don't consider out-of-range bins when computing particle count estimate

Issue #11783 Add QC Flag to annotations
- Updated AnnotationRecord to include QCFlag

Release 1.2.4

Issue #11952
- Updated aggregation response to be JSON (was plain string)

Issue #11861
- QC executed and QC results variables are incorrectly typed

Issue #10777
- modify stream_engine to utilize deployment times to bound product generation requests

Release 1.2.3

Issue #11753
- Aggregation fails when string lengths differ between datasets

Issue #11715
- Added source attribute to the AnnotationRecord class to identify the creator of the data.

Release 1.2.2

Issue #11646
- Production generation fails if no asset management data exists for one or more deployments

Issue #11642