@@ -1,3 +1,7 @@
+NEXT RELEASE
+
+Issue #12238 - Don't drop duplicate timestamps from separate deployments
+
 Release 1.3.5
 
 Issue #12215 - Sampling strategy returns data outside query bounds
